--- a/roles/bench_fiorand/defaults/main.yml
+++ b/roles/bench_fiorand/defaults/main.yml
@@ -16,7 +16,7 @@ bench_fiorand_namespace: '{{ run_namespace }}'
 # label on pods
 bench_fiorand_podlabel: "type=benchmark-pod"
 
-# var for nodeSelector
+# for nodeSelector
 # bench_fiorand_nodelabel: "kubernetes.io/hostname=ip-10-0-205-26"
 
 
