--- a/roles/stats_sysstat/tasks/stop.yml
+++ b/roles/stats_sysstat/tasks/stop.yml
@@ -1,6 +1,5 @@
 ---
-# tasks file for stats_sysstat stop
 
 - name: stop sysstat pods
-  command: 'kubectl delete -f {{ run_dir }}/{{ role_name }}/sysstat_daemonset.yaml'
+  command: 'kubectl delete -f {{ stats_sysstat_dir }}/sysstat_daemonset.yaml -n {{ stats_sysstat_namespace }}'
 ...
