--- a/roles/bench_fiorand/tasks/cleanup.yml
+++ b/roles/bench_fiorand/tasks/cleanup.yml
@@ -1,9 +1,9 @@
 ---
 
 - name: stop fio pod
-  command: 'kubectl delete -f {{ bench_fiorand_dir }}/fio_job.yaml -n {{ bench_fiorand_namespace }}'
+  command: 'kubectl delete -f {{ bench_fiorand_dir }}/fiorun_job.yaml -n {{ bench_fiorand_namespace }}'
 
-- name: delete benchmark configmap
-  command: 'kubectl delete configmap {{ bench_fiorand_configmap }} -n {{ bench_fiorand_namespace }}'
+- name: delete fio pvc
+  command: 'kubectl delete -f {{ bench_fiorand_dir }}/fiopvc.yaml -n {{ bench_fiorand_namespace }}'
 
 ...
