reworked drop caches

--- a/roles/util_dropcaches/tasks/main.yml
+++ b/roles/util_dropcaches/tasks/main.yml
@@ -1,7 +1,10 @@
 ---
 # tasks file for util_dropcaches
 
-- include_tasks: ceph.yml
+- include_role: 
+    name: storage_ceph
+  vars: 
+    action: drop_caches
   when: ceph_benchrun is defined and ceph_benchrun
 
 ...
