--- a/roles/bench_ycsb/tasks/run.yml
+++ b/roles/bench_ycsb/tasks/run.yml
@@ -1,7 +1,12 @@
 ---
 
-- name: update configmap to mark run phase
-  shell: 'kubectl create configmap {{ bench_ycsb_configmap }} --from-literal={{ bench_ycsb_mapkey }}={{ bench_ycsb_nextphase }} -n {{ bench_ycsb_namespace }} -o yaml --dry-run | kubectl replace -f -'
+- name: create ycsb job file from template
+  template:
+    src: '{{ role_path }}/templates/ycsbrun_job.j2'
+    dest: '{{ bench_ycsb_dir }}/ycsbrun_job.yaml'
+
+- name: create ycsb pod
+  command: 'kubectl create -f {{ bench_ycsb_dir }}/ycsbrun_job.yaml -n {{ bench_ycsb_namespace }}'
 
 - name: get pod name
   command: 'kubectl get pods -l {{ bench_ycsb_podlabel }} -n {{ bench_ycsb_namespace }} --no-headers -o custom-columns=":metadata.name"'
