--- a/roles/db_mongodb/defaults/main.yml
+++ b/roles/db_mongodb/defaults/main.yml
@@ -1,5 +1,9 @@
 ---
 
+#
+# variables similar to the below are likely to be present in different roles
+#
+
 # output directory for run
 db_mongodb_pdir: '{{ run_dir }}'
 
@@ -12,10 +16,32 @@ db_mongodb_namespace: '{{ run_namespace }}'
 # label on pods
 db_mongodb_podlabel: "role=mongo"
 
+# for nodeSelector; example below
+# db_mongodb_nodelabel: "cluster.ocs.openshift.io/openshift-storage=''"
+
 # name of container in mongodb pod
 db_mongodb_container: "mongo"
 
 # max time to wait for mongo pods to be ready
 db_mongodb_timetoready_sec: 600
+
+#
+# variables specific to this role
+#
+
+# the sidecar needs a role and role binding to work
+# error handling is easier if it is created only once
+# set to False if role already exists in cluster
+db_mongodb_rbac_dynamic: False
+
+# do not change; should match template
+db_mongodb_mntpt: /data/db # mongodb data directory
+db_mongodb_port: "27017"
+
+# pvc size; limit on data set size
+db_mongodb_pvcsize_gb: 8
+
+# number of replicas 
+db_mongodb_replicas: 3
 
 ...
