--- a/roles/db_mongodb/tasks/stop.yml
+++ b/roles/db_mongodb/tasks/stop.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: stop mongodb pods
-  command: 'kubectl delete -f {{ role_path }}/files/mongodb_service.yaml -n {{ db_mongodb_namespace }}'
+  command: 'kubectl delete -f {{ db_mongodb_dir }}/mongodb_statefulset.yaml -n {{ db_mongodb_namespace }}'
 
 - name: get mongodb pvc names
   command: 'kubectl get pvc -l {{ db_mongodb_podlabel }} -n {{ db_mongodb_namespace }} --no-headers -o
@@ -11,5 +11,9 @@ custom-columns=":metadata.name"'
 - name: delete mongodb pvcs 
   command: 'kubectl delete pvc {{ item }} -n {{ db_mongodb_namespace }}'
   with_items: "{{ pvclist.stdout_lines }}"
+
+- name: delete sidecar related role
+  command: 'kubectl delete -f {{ db_mongodb_dir }}/sidecar_rbac.yaml'
+  when: db_mongodb_rbac_dynamic
 
 ...
