--- a/roles/db_mongodb/tasks/flush_caches.yml
+++ b/roles/db_mongodb/tasks/flush_caches.yml
@@ -5,13 +5,13 @@
   register: podlist
 
 - name: flush start timestamp
-  shell: 'date > {{ db_mongodb_dir }}/flush_caches.start.txt'
+  shell: 'date >> {{ db_mongodb_dir }}/flush_caches.start.txt'
 
 - name: flush db caches 
   shell: 'kubectl exec {{ item }} -c {{ db_mongodb_container }} -n {{ db_mongodb_namespace }} -- mongo ycsb --eval "db.adminCommand( { fsync: 1, lock: false } )"'
   with_items: "{{ podlist.stdout_lines }}"
 
 - name: flush start timestamp
-  shell: 'date > {{ db_mongodb_dir }}/flush_caches.finish.txt'
+  shell: 'date >> {{ db_mongodb_dir }}/flush_caches.finish.txt'
 
 ...
