add drop cache support via stats_sysstat

--- a/roles/stats_sysstat/defaults/main.yml
+++ b/roles/stats_sysstat/defaults/main.yml
@@ -27,6 +27,9 @@ stats_sysstat_podoutdir: /data
 # variables specific to this role
 #
 
+# allow dropping caches
+stats_sysstat_allowdropcache: False
+
 # default monitoring interval
 stats_sysstat_interval_sec: 10
 
