--- a/roles/bench_ycsb/defaults/main.yml
+++ b/roles/bench_ycsb/defaults/main.yml
@@ -61,4 +61,11 @@ bench_ycsb_load_thrds: 16
 # number of threads in run phase
 bench_ycsb_run_thrds: 8
 
+# any additional command-line options for load phase
+# bench_ycsb_load_addlopts: ""
+
+# any additional command-line options for run phase
+# e.g.: bench_ycsb_run_addlopts: "-p requestdistribution=uniform"
+# bench_ycsb_run_addlopts: ""
+
 ...
