--- a/roles/db_mongodb/tasks/gather.yml
+++ b/roles/db_mongodb/tasks/gather.yml
@@ -5,6 +5,10 @@
   command: 'kubectl get pods -l {{ db_mongodb_podlabel }} -n {{ db_mongodb_namespace }} --no-headers -o custom-columns=":metadata.name"'
   register: podlist
 
+- name: fetch mongodb parameter settings
+  shell: "kubectl exec {{ item }} -c {{ db_mongodb_container }} -n {{ db_mongodb_namespace }} -- mongo admin --eval \"db.adminCommand( { getParameter : '*' } )\" > {{ db_mongodb_dir }}/{{ item }}/mongo.settings.txt"
+  with_items: "{{ podlist.stdout_lines }}"
+
 - name: fetch df output from pod
   shell: 'kubectl exec {{ item }} -c {{ db_mongodb_container }} -n {{ db_mongodb_namespace }} -- df -h > {{ db_mongodb_dir }}/{{ item }}/mongo.df_h.txt'
   with_items: "{{ podlist.stdout_lines }}"
