--- a/roles/db_mongodb/tasks/flush_caches.yml
+++ b/roles/db_mongodb/tasks/flush_caches.yml
@@ -1,17 +1,19 @@
 ---
 
+# flush the database whose name is passed in var db_storename
+
 - name: get pod names 
   command: 'kubectl get pods -l {{ db_mongodb_podlabel }} -n {{ db_mongodb_namespace }} --no-headers -o custom-columns=":metadata.name"'
   register: podlist
 
 - name: flush start timestamp
-  shell: 'date >> {{ db_mongodb_dir }}/flush_caches.start.txt'
+  shell: 'date >> {{ db_mongodb_dir }}/flush_caches.{{ db_storename }}.start.txt'
 
 - name: flush db caches 
-  shell: 'kubectl exec {{ item }} -c {{ db_mongodb_container }} -n {{ db_mongodb_namespace }} -- mongo ycsb --eval "db.adminCommand( { fsync: 1, lock: false } )"'
+  shell: 'kubectl exec {{ item }} -c {{ db_mongodb_container }} -n {{ db_mongodb_namespace }} -- mongo {{ db_storename }} --eval "db.adminCommand( { fsync: 1, lock: false } )"'
   with_items: "{{ podlist.stdout_lines }}"
 
 - name: flush start timestamp
-  shell: 'date >> {{ db_mongodb_dir }}/flush_caches.finish.txt'
+  shell: 'date >> {{ db_mongodb_dir }}/flush_caches.{{ db_storename }}.finish.txt'
 
 ...
