--- a/roles/bench_fioforsql/tasks/prepare.yml
+++ b/roles/bench_fioforsql/tasks/prepare.yml
@@ -6,6 +6,10 @@
     path: '{{ bench_fioforsql_dir }}'
     state: directory
 
+- set_fact:
+    bench_fioforsql_storageclass: '{{ run_storageclass }}'
+  when: bench_fioforsql_storageclass is not defined and run_storageclass is defined
+
 - name: create pvc yaml from template
   template:
     src: '{{ role_path }}/templates/fiopvc.j2'
