--- a/roles/bench_fioseq/defaults/main.yml
+++ b/roles/bench_fioseq/defaults/main.yml
@@ -13,6 +13,11 @@ bench_fioseq_dir: '{{ run_dir }}/{{ role_name }}'
 # namespace
 bench_fioseq_namespace: '{{ run_namespace }}'
 
+# bench_fioseq_storageclass: 
+#   if bench_fioseq_storageclass is defined that is used
+#   else if run_storageclass is defined that is used
+#   else default storage class is used
+
 # label on pods
 bench_fioseq_podlabel: "type=benchmark-pod"
 
