--- a/test_calm_role.yml
+++ b/test_calm_role.yml
@@ -4,9 +4,10 @@
 
 - hosts: localhost
   vars:
-    benchmark_role: calm_fioiops
+    calm_role: calm_fioiops
     run_dir: /tmp/run_ts
     run_namespace: nm-kubuculum
+    calm_fioiops_storageclass: ocs-storagecluster-ceph-rbd
 
   tasks:
 
