make randwrite test optional in bench_fiorand

--- a/roles/bench_fiorand/defaults/main.yml
+++ b/roles/bench_fiorand/defaults/main.yml
@@ -39,6 +39,9 @@ bench_fiorand_maxtime_sec: 36000
 # variables likely to be specific to this benchmark
 #
 
+# allow random write test to be optional
+bench_fiorand_testrwrite: True
+
 # pvc size; limit on data set size
 bench_fiorand_pvcsize_gb: 8
 
